<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.MCQFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!-- Instruction -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mcq_instruction"
            android:layout_margin="20dp"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:layout_marginVertical="8dp" />

        <!-- Question -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/question_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:importantForAccessibility="yes"
            android:text="@string/mcq_question"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="32sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:columnCount="3"
            android:alignmentMode="alignMargins"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_a"
                style="@style/OptionButton"
                android:text="@string/option_a"
                android:contentDescription="@string/option_desc_a" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_b"
                style="@style/OptionButton"
                android:text="@string/option_b"
                android:contentDescription="@string/option_desc_b" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_c"
                style="@style/OptionButton"
                android:text="@string/option_c"
                android:contentDescription="@string/option_desc_c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_d"
                style="@style/OptionButton"
                android:text="@string/option_d"
                android:contentDescription="@string/option_desc_d" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_e"
                style="@style/OptionButton"
                android:text="@string/option_e"
                android:contentDescription="@string/option_desc_e" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_f"
                style="@style/OptionButton"
                android:text="@string/option_f"
                android:contentDescription="@string/option_desc_f" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_g"
                style="@style/OptionButton"
                android:text="@string/option_g"
                android:contentDescription="@string/option_desc_g" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_h"
                style="@style/OptionButton"
                android:text="@string/option_h"
                android:contentDescription="@string/option_desc_h" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_i"
                style="@style/OptionButton"
                android:text="@string/option_i"
                android:contentDescription="@string/option_desc_i" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_j"
                style="@style/OptionButton"
                android:text="@string/option_j"
                android:contentDescription="@string/option_desc_j" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
