<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.MCQFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_text"
            android:textColor="@color/primaryText"
            android:textSize="24sp"
            android:layout_margin="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/question_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/math_question_text"
            android:textColor="@color/primaryText"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textSize="48sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:contentDescription="@string/question_content_desc" />


        <!-- First Row of Options -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_a"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:textSize="24sp"
                android:text="@string/option_a"
                android:textColor="@color/primaryText"
                android:backgroundTint="@color/button"
                android:contentDescription="@string/option_desc_a" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_b"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:textSize="24sp"
                android:text="@string/option_b"
                android:textColor="@color/primaryText"
                android:backgroundTint="@color/button"
                android:contentDescription="@string/option_desc_b" />

        </LinearLayout>

        <!-- Second Row of Options -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_c"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:textSize="24sp"
                android:text="@string/option_c"
                android:textColor="@color/primaryText"
                android:backgroundTint="@color/button"
                android:contentDescription="@string/option_desc_c" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_d"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:textSize="24sp"
                android:text="@string/option_d"
                android:textColor="@color/primaryText"
                android:backgroundTint="@color/button"
                android:contentDescription="@string/option_desc_e" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
