<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:contentDescription="@string/home_page_content_description">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/dialpadButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/dialpad_content_description"
                android:focusable="true"
                app:cardBackgroundColor="@color/button"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dialpad"
                    android:textColor="@color/primaryText"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fourmcqButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/four_mcq_content_description"
                android:focusable="true"
                app:cardBackgroundColor="@color/button"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/four_mcq"
                    android:textColor="@color/primaryText"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fivemcqButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/five_mcq_content_description"
                android:focusable="true"
                app:cardBackgroundColor="@color/button"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/five_mcq"
                    android:textColor="@color/primaryText"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/tenmcqButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/ten_mcq_content_description"
                android:focusable="true"
                app:cardBackgroundColor="@color/button"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ten_mcq"
                    android:textColor="@color/primaryText"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <!-- Row 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/numericDialButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/numeric_dial_content_description"
                android:focusable="true"
                app:cardBackgroundColor="@color/button"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/numeric_dial"
                    android:textColor="@color/primaryText"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/spinnersButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/spinner_content_description"
                android:focusable="true"
                app:cardBackgroundColor="@color/button"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/spinner"
                    android:textColor="@color/primaryText"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <!-- Row 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/SettingsButtons"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/settings_content_description"
                android:focusable="true"
                app:cardBackgroundColor="@color/button"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/primaryText"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/quitButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:contentDescription="@string/quit_button_content_description"
                android:focusable="true"
                app:cardBackgroundColor="@color/button"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/quit_button"
                    android:textColor="@color/primaryText"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
